Fix checkstyle warnings: - Use Boolean.valueOf(). This method is available since Java 1.4. - Replace tab character